# website-change-notifier

./: .env.example  .gitignore  README.md  db.json  pyproject.toml
src/: config.py  handlers.py  jobs.py  main.py
